# WinSweep

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.ps1  build_in_vs_dev.bat  check_components.ps1  crates.js  fix_build_env.ps1  help.html  index.html  settings.html  setup_build_env.ps1  setup_vs_env.ps1  setup_windows_sdk.ps1  src-files.js  verify.ps1  verify_simple.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/winsweep-cli/: Cargo.toml
crates/winsweep-cli/src/: app.rs  main.rs
crates/winsweep-common/: Cargo.toml
crates/winsweep-common/src/: config.rs  i18n.rs  lib.rs  never_delete.rs  project_signatures.rs  types.rs
crates/winsweep-core/: Cargo.toml
crates/winsweep-core/src/: audit_logger.rs  cleanup.rs  docker.rs  home_edition_compat.rs  ipc.rs  junction_detector.rs  lib.rs  package_manager.rs  restart_manager.rs  scanner.rs  service_manager.rs  tool_detector.rs  updater.rs  windows_api.rs  windows_edition.rs  wsl_detector.rs
crates/winsweep-core/src/package_manager/: android_sdk.rs  browser.rs  bun.rs  bundler.rs  cargo.rs  composer.rs  conan.rs  conda.rs  cypress.rs  flutter.rs  git_lfs.rs  go_build.rs  go_modules.rs  gradle.rs  jetbrains.rs  maven.rs  minikube.rs  npm.rs  nuget.rs  pip.rs  pixi.rs  playwright.rs  pnpm.rs  poetry.rs  ruby_gems.rs  sbt.rs  uv.rs  vagrant.rs  vcpkg.rs  vscode.rs  yarn.rs
crates/winsweep-core/tests/: scanner_tests.rs
crates/winsweep-gui/: Cargo.toml
crates/winsweep-gui/src/: app.rs  elevated_coordinator.rs  main.rs  notifications.rs  scheduler.rs  tray.rs  util.rs
crates/winsweep-gui/src/viewmodel/: dashboard.rs  docker.rs  mod.rs  package_managers.rs  scan.rs  services.rs  settings.rs  windows_update.rs  wsl.rs
crates/winsweep-gui/src/views/: dashboard.rs  docker.rs  mod.rs  package_managers.rs  scan.rs  services.rs  settings.rs  utils.rs  windows_update.rs  wsl.rs
docs/: Clean-Build-Status.md  WinSweep-Audit-Report.md  WinSweep-Completion-Plan.md  WinSweep-Deep-Audit-Pass2-2026-06-30.md  WinSweep-Senior-Engineering-Audit-2026-06-30.md  Windows-Home-Edition-Compatibility-Report.md  api-reference.md  developer-guide.md  faq.md  user-guide.md
docs/archive/: WinSweep-FactVerified-Plan-v3.md  WinSweep-FactVerified-Plan-v4.md  WinSweep-Implementation-Plan-vFinal.md  plan.md
installer/: winsweep.nsi
locales/: en.yml  es.yml
scripts/: sign-build.ps1  tag-release.ps1  validate-diskpart-compact.ps1  validate-wsl-manage.ps1
search.index/: root.js
search.index/crateNames/: 8560ef825b.js
src/: lib.rs
src/winsweep/: lib.rs.html
tests/: integration_tests.rs
winsweep/: all.html  index.html
