[workspace]
members = [
    "crates/winsweep-core",
    "crates/winsweep-cli",
    "crates/winsweep-gui",
    "crates/winsweep-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["WinSweep Team"]
license = "MIT"
homepage = "https://github.com/winsweep/winsweep"
repository = "https://github.com/winsweep/winsweep"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Windows specific
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_RestartManager",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
    "Win32_System_Shutdown",
    "Win32_UI_Shell",
    "Win32_System_WindowsProgramming",
] }

# CLI
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"

# GUI (for future Phase 4)
# windows-ui = "0.1"  # Will add when implementing Phase 4

# Utilities
which = "5.0"
walkdir = "2.4"
ignore = "0.4"
glob = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"
humantime = "2.1"
humantime-serde = "1.1"
indexmap = "2.2"
dashmap = "6.0"
parking_lot = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
shellexpand = "3.1"
bytes = "1.5"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
dirs = "5.0"

# Internal workspace dependencies
winsweep-common = { path = "crates/winsweep-common" }

# Testing
tempfile = "3.8"
mockall = "0.12"
