[package]
name = "winsweep-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "winsweep"
path = "src/main.rs"

[dependencies]
winsweep-core = { path = "../winsweep-core" }
winsweep-common = { path = "../winsweep-common" }

# CLI
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
which = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
