[package]
name = "winsweep-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Common types and utilities
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
