[package]
name = "winsweep-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Common types and utilities
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dirs = "6.0"

[dev-dependencies]
tempfile = { workspace = true }
