[package]
name = "winsweep-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
winsweep-common = { workspace = true }
tokio = { workspace = true }
windows = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
indexmap = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
async-trait = "0.1"
shellexpand = "3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"
mockall = { workspace = true }
