[package]
name = "winsweep-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "winsweep-gui"
path = "src/main.rs"

[dependencies]
winsweep-core = { path = "../winsweep-core" }
winsweep-common = { path = "../winsweep-common" }

# Async
tokio = { workspace = true }

# GUI framework
egui = "0.29"
egui-winit = "0.29"
winit = "0.30"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.14"  # File dialogs
tray-icon = { version = "0.14", optional = true }  # System tray support

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID for temp file naming
uuid = { version = "1.0", features = ["v4"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }

[features]
default = []
system-tray = ["tray-icon"]
