[package]
name = "winsweep-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "winsweep-gui"
path = "src/main.rs"

[dependencies]
winsweep-core = { path = "../winsweep-core" }
winsweep-common = { path = "../winsweep-common" }

# Async
tokio = { workspace = true }

# GUI framework
egui = "0.29"
egui-winit = "0.29"
winit = "0.30"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = { version = "0.29", features = ["image"] }
egui_plot = "0.35"
rfd = "0.14"  # File dialogs
sysinfo = "0.32"
winreg = "0.52"
tray-icon = { version = "0.14", optional = true }  # System tray support

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI parsing for GUI binary
clap = { workspace = true }

# Windows raw API bindings
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell"] }

# UUID for temp file naming
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
toml = { workspace = true }

[features]
default = []
system-tray = ["tray-icon"]
